[tool.poetry]
name = "aht20-exporter"
version = "0.1.0"
description = "AHT20 Prometheus Exporter"
authors = ["Ayres Fonseca <ayres.fonseca@yahoo.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-tca9548a = "^0.7.3"
adafruit-circuitpython-ahtx0 = "^1.0.21"
prometheus-client = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
